--- a/src/view/telas/ListarPedido.fxml
+++ b/src/view/telas/ListarPedido.fxml
@@ -20,13 +20,10 @@
       </ImageView>
       <TableView fx:id="tabelaPedido" layoutX="163.0" layoutY="202.0" prefHeight="386.0" prefWidth="1058.0" style="-fx-background-color: #ffffff; -fx-border-color: #127696;">
          <columns>
-            <TableColumn fx:id="ide" prefWidth="96.80000305175781" text="ID" />
-            <TableColumn fx:id="titulo" prefWidth="364.5332946777344" text="Título" />
-            <TableColumn fx:id="codISBN10" minWidth="0.0" prefWidth="138.666748046875" text="Código ISBN10" />
-            <TableColumn fx:id="codISBN13" minWidth="0.0" prefWidth="143.466552734375" text="Código ISBN13" />
-            <TableColumn fx:id="quantidade" prefWidth="108.79986572265625" text="Quantidade" />
-            <TableColumn fx:id="valorUnitario" prefWidth="105.60015869140625" text="Valor Unitário" />
-            <TableColumn fx:id="totalLivro" minWidth="0.0" prefWidth="103.4666748046875" text="Valor Total" />
+            <TableColumn fx:id="id_pedido" prefWidth="96.80000305175781" text="ID" />
+            <TableColumn fx:id="data" prefWidth="254.0" text="Data" />
+            <TableColumn fx:id="hora" minWidth="0.0" prefWidth="250.0" text="Hora" />
+            <TableColumn fx:id="funcionario" minWidth="0.0" prefWidth="455.0" text="Funcionário" />
          </columns>
       </TableView>
       <Button layoutX="163.0" layoutY="624.0" mnemonicParsing="false" onAction="#cadastrar" prefHeight="43.0" prefWidth="167.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #127696;" text="Inserir" textFill="WHITE">
@@ -34,17 +31,7 @@
             <Font name="System Bold" size="18.0" />
          </font>
       </Button>
-      <Button layoutX="350.0" layoutY="624.0" mnemonicParsing="false" onAction="#atualizar" prefHeight="43.0" prefWidth="167.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #127696;" text="Atualizar" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Button>
-      <Button layoutX="998.0" layoutY="624.0" mnemonicParsing="false" onAction="#finalizarCompra" prefHeight="43.0" prefWidth="223.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #127696;" text="Finalizar Compra" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Button>
-      <Button layoutX="537.0" layoutY="624.0" mnemonicParsing="false" onAction="#excluir" prefHeight="43.0" prefWidth="167.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #127696;" text="Excluir" textFill="WHITE">
+      <Button layoutX="352.0" layoutY="624.0" mnemonicParsing="false" onAction="#excluir" prefHeight="43.0" prefWidth="167.0" style="-fx-background-radius: 20; -fx-border-radius: 20; -fx-background-color: #127696;" text="Excluir" textFill="WHITE">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -75,10 +62,5 @@
       </Button>
       <ComboBox fx:id="pesquisac" layoutX="817.0" layoutY="130.0" onAction="#box" prefHeight="43.0" prefWidth="166.0" promptText="SELECIONE" style="-fx-background-radius: 20; -fx-border-radius: 20;" />
       <Label fx:id="erroSelect" layoutX="818.0" layoutY="99.0" prefHeight="27.0" prefWidth="166.0" text="Selecione" textAlignment="CENTER" textFill="#127696" visible="false" />
-      <Label fx:id="totalCompra" layoutX="1000.0" layoutY="673.0" prefHeight="27.0" prefWidth="237.0" text="Total da compra: R$" textFill="#127696">
-         <font>
-            <Font name="System Bold" size="18.0" />
-         </font>
-      </Label>
    </children>
 </Pane>
